@@ -1,3 +1,7 @@
+Mon Oct 27 14:40:15 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
+
+	* status.c (status): Don't pass SEND_NO_CONTENTS to send_files.
+
 Sat Oct 25 00:33:57 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
 
 	* rcs.c (RCS_delete_revs): Use : not - for range in error message.
